--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 </head>
 
 <body>
+  <div class="header">
   <header>
     <h1>
       "Visualizing the Impact of Mental Health: A Global and Local Perspective"
     </h1>
     <header>
+    </div>
 
       <div class="Introduction">
         <p>Mental health profoundly influences every aspect of human life, from individual well-being to societal
@@ -41,10 +43,6 @@
           effective
           interventions.</p>
       </div>
-
-      <img href="https://www.camh.ca/-/media/images/camh-logo.png" alt="CAMH Logo" class="center">
-
-
 
       <div class="container-1 mt-2">
         <h2>Who Is Affected?</h2>
